[package]
name = "compute-tau"
version = "0.2.1"
authors = ["Katsutoshi Seki", "Xuanmizhen"]
edition = "2021"
description = "A Rust library designed for computing tau to millions of digits"
license = "MIT"
repository = "https://github.com/Xuanmizhen/compute-tau"
keywords = ["tau", "mathematics", "numerical"]
categories = ["algorithms", "mathematics"]

[[bin]]
name = "compute-tau"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies.rug]
version = "1.25"
default-features = false
features = ["float", "std"]
